# taguchi

./: .gitignore  ARRAYS_REFERENCE.md  AUTORESEARCH_INTEGRATION.md  CHANGELOG.md  DOCS.md  LICENSE  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  TODO.md  test_integration.c
bindings/python/: README.md  README_ENHANCED.md  demo.py  pyproject.toml  run_tests.py
bindings/python/examples/: async_usage_example.py  enhanced_basic_usage.py  troubleshooting_guide.py
bindings/python/taguchi/: __init__.py  analyzer.py  analyzer_enhanced.py  config.py  core.py  core_enhanced.py  errors.py  experiment.py  experiment_enhanced.py
bindings/python/tests/: conftest.py  test_analyzer.py  test_analyzer_enhanced.py  test_config.py  test_core.py  test_core_enhanced.py  test_errors.py  test_experiment.py  test_experiment_enhanced.py  test_integration.py  test_integration_enhanced.py
docs/: API.md  DESIGN.md  DOCS.md  ENGINEERING_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  SUMMARY.md  analysis_infrastructure_parsing_arrays.md
examples/: DOCUMENTATION.md  LEVEL_VARIATIONS.md  README.md  hyperparameter-search.md  long-running-experiments.md
examples/chocolate-chips/: README.md  cookie_experiment.tgu  generate_recipe_cards.sh  recipe_cards.txt  results_template.csv  sample_results.csv  temp_debug.txt  (+1 more)
include/: taguchi.h
spec/: Taguchi Array Tool C Implementation.md
src/: config.h
tests/: test_analyzer.c  test_arrays.c  test_auto_select.c  test_csv_multicolumn.sh  test_framework.h  test_generation.c  test_parser.c  test_runner.c  test_security.c  test_utils.c
(+24 files in other folders)
