[project]
name = "taguchi-bindings"
version = "1.4.0"
description = "Python bindings for Taguchi orthogonal array tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["taguchi*"]
